fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
   "Apply template": "Застосувати шаблон",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Від'єднатись",
   "Disconnect analytics": "Від'єднати аналітику",
   "Home": "Головна",
@@ -172,6 +174,7 @@
   "Navigation": "Навігація",
   "Notification": "Сповіщення",
   "Groups": "Групи",
+  "Emoji": "Emoji",
   "People": "Люди",
   "Share": "Поширити",
   "Workspace": "Робочий простір",
@@ -253,6 +256,20 @@
   "Currently editing": "Зараз редагується",
   "Currently viewing": "Зараз переглядають",
   "Viewed {{ timeAgo }}": "Переглянуто {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Завантажується",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Не вдалося завантажити модуль",
   "Loading Failed": "Не вдалося завантажити",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "На жаль, не вдалося завантажити частину програми. Це може бути тому, що вона була оновлена після того, як ви відкрили вкладку або через невдалий мережевий запит. Будь ласка, спробуйте перезавантажити.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Вибір значків",
   "Icons": "Значки",
   "Emojis": "Емодзі",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Custom",
   "Remove": "Видалити",
   "All": "Всі",
   "Frequently Used": "Часто використовувані",
@@ -597,6 +616,9 @@
   "Comment options": "Налаштування коментарів",
   "Enable viewer insights": "Увімкнути статистику перегляду",
   "Enable embeds": "Увімкнути вкладення",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Учасники групи",
   "Edit group": "Редагувати групу",
@@ -647,7 +669,6 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Архів документів на даний час порожній.",
   "Drop documents to import": "Перетягніть документи для імпорту",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Вбудований LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Увійти",
   "Continue with Email": "Продовжити з електронною поштою",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Ваш імпорт обробляється, ви можете спокійно покинути цю сторінку",
   "File not supported – please upload a valid ZIP file": "Файл не підтримується – завантажте дійсний файл ZIP",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Завантажується",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Виконується",
   "Expired": "Термін дії минув",
   "Completed": "Завершено",
@@ -1060,6 +1081,8 @@
   "Editors": "Редактори",
   "All status": "Весь статус",
   "Active": "Активний",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Налаштування збережено",
