fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "您已退出共享文档",
   "Could not leave document": "无法退出文档",
   "Apply template": "应用模板",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "断开连接",
   "Disconnect analytics": "断开分析服务连接",
   "Home": "主页",
@@ -172,6 +174,7 @@
   "Navigation": "导航",
   "Notification": "通知",
   "Groups": "群组",
+  "Emoji": "表情",
   "People": "用户",
   "Share": "分享",
   "Workspace": "工作区",
@@ -253,6 +256,20 @@
   "Currently editing": "正在编辑",
   "Currently viewing": "正在浏览",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 浏览",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "上传中",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "模块加载失败",
   "Loading Failed": "加载失败",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "对不起，部分应用程序加载失败。这可能是因为它在您打开选项卡后更新了，或者是因为网络请求失败。请尝试重新加载。",
@@ -299,6 +316,8 @@
   "Icon Picker": "图标选择器",
   "Icons": "图标",
   "Emojis": "表情包",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "自定义",
   "Remove": "移除",
   "All": "全部",
   "Frequently Used": "经常使用的",
@@ -597,6 +616,9 @@
   "Comment options": "评论选项",
   "Enable viewer insights": "启用浏览者统计",
   "Enable embeds": "启用嵌入",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "文件",
   "Group members": "群组成员",
   "Edit group": "编辑群组",
@@ -647,7 +669,6 @@
   "30 days": "30 天",
   "60 days": "60 天",
   "90 days": "90 天",
-  "Custom": "自定义",
   "No expiration": "无期限",
   "The document archive is empty at the moment.": "文档归档目前是空的。",
   "Drop documents to import": "拖放文档以导入",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "行内公式",
   "Triggers": "触发器",
   "Mention users and more": "提及用户等",
-  "Emoji": "表情",
   "Insert block": "插入块",
   "Sign In": "登录",
   "Continue with Email": "使用电子邮箱继续",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "您的导入正在处理中，您可以放心地离开此页面",
   "File not supported – please upload a valid ZIP file": "不支持文件 - 请上传有效的 ZIP 文件",
   "Set the default permission level for collections created from the import": "为从导入创建的文档集设置默认权限级别",
-  "Uploading": "上传中",
   "Start import": "开始导入",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "处理中",
   "Expired": "已过期",
   "Completed": "已完成",
@@ -1060,6 +1081,8 @@
   "Editors": "编辑者",
   "All status": "所有状态",
   "Active": "活跃的",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
   "Settings saved": "设置已保存",
