fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "您離開了共享的文件",
   "Could not leave document": "無法離開文件",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "解除連結",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "首頁",
@@ -172,6 +174,7 @@
   "Navigation": "導覽",
   "Notification": "通知",
   "Groups": "群組",
+  "Emoji": "Emoji",
   "People": "人員",
   "Share": "分享",
   "Workspace": "工作空間",
@@ -253,6 +256,20 @@
   "Currently editing": "正在編輯",
   "Currently viewing": "正在瀏覽",
   "Viewed {{ timeAgo }}": "{{ timeAgo }} 前瀏覽過",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "正在上傳",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "模組載入失敗",
   "Loading Failed": "載入失敗",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "抱歉，部分應用程式載入失敗。有可能是因為在您打開分頁後被更新過，或是網路連線請求失敗。請嘗試重新載入。",
@@ -299,6 +316,8 @@
   "Icon Picker": "圖示選擇器",
   "Icons": "圖示",
   "Emojis": "表情符號",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "自訂",
   "Remove": "移除",
   "All": "全部",
   "Frequently Used": "經常使用的",
@@ -597,6 +616,9 @@
   "Comment options": "評論選項",
   "Enable viewer insights": "啟用瀏覽者洞察分析",
   "Enable embeds": "啟用嵌入物件",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "群組成員",
   "Edit group": "編輯群組",
@@ -647,7 +669,6 @@
   "30 days": "30 天",
   "60 days": "60 天",
   "90 days": "90 天",
-  "Custom": "自訂",
   "No expiration": "沒有期限",
   "The document archive is empty at the moment.": "目前沒有任何文件被封存。",
   "Drop documents to import": "拖曳文件以進行匯入",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "行內 LaTeX",
   "Triggers": "觸發器",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "插入區塊",
   "Sign In": "登入",
   "Continue with Email": "使用電子郵件以繼續",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "您的匯入正在處理中，您可以安全地離開此頁面",
   "File not supported – please upload a valid ZIP file": "該文件不被支持 - 請上傳有效的 ZIP 壓縮文件",
   "Set the default permission level for collections created from the import": "為從匯入建立的文件集建立預設權限",
-  "Uploading": "正在上傳",
   "Start import": "開始匯入",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "正在處理",
   "Expired": "已逾時",
   "Completed": "已完成",
@@ -1060,6 +1081,8 @@
   "Editors": "編輯者",
   "All status": "所有狀態",
   "Active": "上線",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "左",
   "Right": "右",
   "Settings saved": "設定已儲存",
