fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Không thể rời tài liệu này",
   "Apply template": "Áp dụng mẫu",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Ngắt kết nối",
   "Disconnect analytics": "Ngắt kết nối thống kê",
   "Home": "Trang chủ",
@@ -172,6 +174,7 @@
   "Navigation": "Điều hướng",
   "Notification": "Thông báo",
   "Groups": "Nhóm",
+  "Emoji": "Emoji",
   "People": "Người tham gia",
   "Share": "Chia sẻ",
   "Workspace": "Workspace",
@@ -253,6 +256,20 @@
   "Currently editing": "Hiện đang chỉnh sửa",
   "Currently viewing": "Hiện đang xem",
   "Viewed {{ timeAgo }}": "Đã xem {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Đang tải lên",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Không tải được Module",
   "Loading Failed": "Tải không thành công",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Xin lỗi, một phần của ứng dụng không tải được. Điều này có thể là do nó đã được cập nhật kể từ khi bạn mở tab hoặc do yêu cầu mạng không thành công. Vui lòng thử tải lại.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Chọn Biểu Tượng",
   "Icons": "Biểu Tượng",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Tuỳ chỉnh",
   "Remove": "Bỏ",
   "All": "Tất cả",
   "Frequently Used": "Thường dùng",
@@ -597,6 +616,9 @@
   "Comment options": "Tùy chọn bình luận",
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Enable embeds": "Bật tính năng nhúng",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Tập tin",
   "Group members": "Thành viên trong nhóm",
   "Edit group": "Chỉnh sửa nhóm",
@@ -647,7 +669,6 @@
   "30 days": "30 ngày",
   "60 days": "60 ngày",
   "90 days": "90 ngày",
-  "Custom": "Tuỳ chỉnh",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Kho lưu trữ tài liệu hiện đang trống.",
   "Drop documents to import": "Thả tài liệu để nhập",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX nội tuyến",
   "Triggers": "Yếu tố kích hoạt",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Chèn khối",
   "Sign In": "Đăng nhập",
   "Continue with Email": "Tiếp tục với email",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Quá trình nhập của bạn đang được xử lý, bạn có thể rời khỏi trang này một cách an toàn",
   "File not supported – please upload a valid ZIP file": "Tệp không được hỗ trợ - vui lòng tải lên tệp ZIP hợp lệ",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Đang tải lên",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Đang xử lý",
   "Expired": "Hết hạn",
   "Completed": "Hoàn thành",
@@ -1060,6 +1081,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Hoạt động",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Đã lưu cài đặt",
