fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Você deixou o documento compartilhado",
   "Could not leave document": "Não foi possível sair do documento",
   "Apply template": "Aplicar modelo",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Desconectar",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Início",
@@ -172,6 +174,7 @@
   "Navigation": "Navegação",
   "Notification": "Notificações",
   "Groups": "Grupos",
+  "Emoji": "Emoji",
   "People": "Pessoas",
   "Share": "Compartilhar",
   "Workspace": "Espaço de Trabalho",
@@ -253,6 +256,20 @@
   "Currently editing": "Atualmente editando",
   "Currently viewing": "Atualmente visualizando",
   "Viewed {{ timeAgo }}": "Visualizou {{ timeAgo }} atrás",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Enviando",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Falha ao carregar módulo",
   "Loading Failed": "Falha ao carregar",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Desculpe, parte da aplicação falhou ao carregar. Isto pode ser porque foi atualizado desde que você abriu a guia ou devido a uma requisição de redecom falha. Tente recarregar.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Seletor de ícone",
   "Icons": "Ícones",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Personalizado",
   "Remove": "Remover",
   "All": "Tudo",
   "Frequently Used": "Frequentemente usado",
@@ -597,6 +616,9 @@
   "Comment options": "Opções de comentário",
   "Enable viewer insights": "Habilitar Estatísticas de Visualização",
   "Enable embeds": "Habilitar incorporações",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Arquivo",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
@@ -647,7 +669,6 @@
   "30 days": "30 dias",
   "60 days": "60 dias",
   "90 days": "90 dias",
-  "Custom": "Personalizado",
   "No expiration": "Sem expiração",
   "The document archive is empty at the moment.": "O arquivo de documento está vazio no momento.",
   "Drop documents to import": "Solte documentos para importar",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX em linha",
   "Triggers": "Gatilhos",
   "Mention users and more": "Mencionar usuários e mais",
-  "Emoji": "Emoji",
   "Insert block": "Inserir bloco",
   "Sign In": "Entrar",
   "Continue with Email": "Continuar com E-mail",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Sua importação está sendo processada, você pode sair dessa página com segurança",
   "File not supported – please upload a valid ZIP file": "Arquivo não suportado – faça upload de um arquivo ZIP válido",
   "Set the default permission level for collections created from the import": "Definir o nível de permissão padrão para coleções criadas a partir da importação",
-  "Uploading": "Enviando",
   "Start import": "Iniciar importação",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Processando",
   "Expired": "Expirado",
   "Completed": "Concluído",
@@ -1060,6 +1081,8 @@
   "Editors": "Editores",
   "All status": "Todos os status",
   "Active": "Ativo",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Esquerda",
   "Right": "Direita",
   "Settings saved": "Configurações salvas",
