fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Memutuskan",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Beranda",
@@ -172,6 +174,7 @@
   "Navigation": "Navigasi",
   "Notification": "Pemberitahuan",
   "Groups": "Grup",
+  "Emoji": "Emoji",
   "People": "Orang",
   "Share": "Bagikan",
   "Workspace": "Ruang Kerja",
@@ -253,6 +256,20 @@
   "Currently editing": "Sedang menyunting",
   "Currently viewing": "Sedang melihat",
   "Viewed {{ timeAgo }}": "Dilihat {{ timeAgo }} lalu",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Mengunggah",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Modul gagal dimuat",
   "Loading Failed": "Gagal Memuat",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Maaf, sebagian dari aplikasi gagal dimuat. Hal ini mungkin terjadi karena aplikasi telah diperbarui sejak Anda membuka tab atau karena permintaan yang gagal. Silakan coba memuat ulang.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Icon Picker",
   "Icons": "Icons",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Custom",
   "Remove": "Hapus",
   "All": "Semua",
   "Frequently Used": "Frequently Used",
@@ -597,6 +616,9 @@
   "Comment options": "Opsi komentar",
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Aktifkan penyematan",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Anggota grup",
   "Edit group": "Sunting grup",
@@ -647,7 +669,6 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Arsip dokumen kosong saat ini.",
   "Drop documents to import": "Dokumen untuk diimpor dengan drop",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "LaTeX Inline",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
   "Insert block": "Insert block",
   "Sign In": "Masuk",
   "Continue with Email": "Lanjutkan dengan Surel",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Pengimporan Anda sedang diproses, Anda dapat meninggalkan halaman ini dengan aman",
   "File not supported – please upload a valid ZIP file": "File tidak didukung – harap unggah file ZIP yang valid",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Mengunggah",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Memproses",
   "Expired": "Kedaluwarsa",
   "Completed": "Selesai",
@@ -1060,6 +1081,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Aktif",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Pengaturan disimpan",
