fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "شما از سند مشترک خارج شده‌اید",
   "Could not leave document": "امکان خروج از سند وجود ندارد",
   "Apply template": "اعمال قالب",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "قطع اتصال",
   "Disconnect analytics": "قطع اتصال تحلیل‌گر",
   "Home": "خانه",
@@ -172,6 +174,7 @@
   "Navigation": "پیمایش",
   "Notification": "اعلانات",
   "Groups": "گروه‌ها",
+  "Emoji": "ایموجی",
   "People": "افراد",
   "Share": "اشتراک‌گذاری",
   "Workspace": "مجموعه",
@@ -253,6 +256,20 @@
   "Currently editing": "در حال ویرایش",
   "Currently viewing": "در حال مشاهده",
   "Viewed {{ timeAgo }}": "مشاهده شده {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "در حال بارگذاری",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "بارگیری ماژول با خطا مواجه شد",
   "Loading Failed": "بارگیری ناموفق",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "متأسفانه امکان بارگیری بخشی از برنامه وجود نداشت. این خطا ممکن است به خاطر به‌روزرسانی ماژول یا اختلال شبکه ایجاد شده باشد. لطفاً دوباره صفحه را بارگیری کنید.",
@@ -299,6 +316,8 @@
   "Icon Picker": "انتخابگر آیکون",
   "Icons": "آیکون ها",
   "Emojis": "شکلک ها",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "سفارشی",
   "Remove": "حذف",
   "All": "همه",
   "Frequently Used": "پر استفاده",
@@ -597,6 +616,9 @@
   "Comment options": "گزینه‌های نظر",
   "Enable viewer insights": "فعال‌سازی آمار بازدید",
   "Enable embeds": "فعال‌سازی جاسازی‌ها",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "فایل",
   "Group members": "اعضای گروه",
   "Edit group": "ویرایش گروه",
@@ -647,7 +669,6 @@
   "30 days": "30 روز",
   "60 days": "60 روز",
   "90 days": "90 روز",
-  "Custom": "سفارشی",
   "No expiration": "بدون انقضا",
   "The document archive is empty at the moment.": "آرشیو اسناد در حال حاضر خالی است.",
   "Drop documents to import": "اسناد را بکشید تا وارد شوند",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "درون خطی LaTeX",
   "Triggers": "محرک‌ها",
   "Mention users and more": "منشن کاربران و بیشتر",
-  "Emoji": "ایموجی",
   "Insert block": "افزودن بلوک",
   "Sign In": "ورود",
   "Continue with Email": "ادامه با ایمیل",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "وارد کردن شما در حال پردازش است، می توانید با خیال راحت این صفحه را ترک کنید",
   "File not supported – please upload a valid ZIP file": "فایل پشتیبانی نمی‌شود – لطفاً یک فایل ZIP معتبر بارگذاری کنید",
   "Set the default permission level for collections created from the import": "سطح دسترسی پیش‌فرض برای مجموعه‌های ایجاد شده از واردات را تنظیم کنید",
-  "Uploading": "در حال بارگذاری",
   "Start import": "شروع ایمپورت",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "در حال پردازش",
   "Expired": "منقضی شده",
   "Completed": "تکمیل شد",
@@ -1060,6 +1081,8 @@
   "Editors": "ویرایشگران",
   "All status": "همه وضعیت‌ها",
   "Active": "فعال",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "چپ",
   "Right": "راست",
   "Settings saved": "تنظیمات ذخیره شد",
