fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "Du har forlatt det delte dokumentet",
   "Could not leave document": "Kunne ikke forlate dokument",
   "Apply template": "Bruk mal",
+  "New emoji": "New emoji",
+  "Upload emoji": "Upload emoji",
   "Disconnect": "Koble fra",
   "Disconnect analytics": "Koble fra analysedata",
   "Home": "Hjem",
@@ -172,6 +174,7 @@
   "Navigation": "Navigasjon",
   "Notification": "Varsling",
   "Groups": "Grupper",
+  "Emoji": "Emoji",
   "People": "Personer",
   "Share": "Del",
   "Workspace": "Arbeidsområde",
@@ -253,6 +256,20 @@
   "Currently editing": "Redigerer nå",
   "Currently viewing": "Ser nå",
   "Viewed {{ timeAgo }}": "Sett {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Uploading": "Laster opp",
+  "Add emoji": "Add emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Feil ved innlasting av modul",
   "Loading Failed": "Innlasting Feilet",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Beklager, en del av applikasjonen mislyktes i å laste. Dette kan være fordi den ble oppdatert etter du åpnet fanen eller på grunn av en nettverksfeil. Vennligst prøv å laste inn på nytt.",
@@ -299,6 +316,8 @@
   "Icon Picker": "Ikonvelger",
   "Icons": "Ikoner",
   "Emojis": "Emojier",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Egendefinert",
   "Remove": "Fjern",
   "All": "Alle",
   "Frequently Used": "Ofte brukt",
@@ -597,6 +616,9 @@
   "Comment options": "Kommentaralternativer",
   "Enable viewer insights": "Aktiver leserinnsikt",
   "Enable embeds": "Aktiver innebygginger",
+  "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "Fil",
   "Group members": "Gruppemedlemmer",
   "Edit group": "Rediger gruppe",
@@ -647,7 +669,6 @@
   "30 days": "30 dager",
   "60 days": "60 dager",
   "90 days": "90 dager",
-  "Custom": "Egendefinert",
   "No expiration": "Ingen utløpsdato",
   "The document archive is empty at the moment.": "Dokumentarkivet er tomt for øyeblikket.",
   "Drop documents to import": "Slipp dokumenter for å importere",
@@ -848,7 +869,6 @@
   "Inline LaTeX": "Innebygd LaTeX",
   "Triggers": "Utløsere",
   "Mention users and more": "Nevn brukere og mer",
-  "Emoji": "Emoji",
   "Insert block": "Sett inn blokk",
   "Sign In": "Logg inn",
   "Continue with Email": "Fortsett med e-post",
@@ -989,8 +1009,9 @@
   "Your import is being processed, you can safely leave this page": "Importen din blir behandlet, du kan trygt forlate denne siden",
   "File not supported – please upload a valid ZIP file": "Fil ikke støttet – vennligst last opp en gyldig ZIP-fil",
   "Set the default permission level for collections created from the import": "Angi standard tilgangsnivå for samlinger opprettet fra denne importen",
-  "Uploading": "Laster opp",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Behandler",
   "Expired": "Utløpt",
   "Completed": "Fullført",
@@ -1060,6 +1081,8 @@
   "Editors": "Redaktører",
   "All status": "Alle statuser",
   "Active": "Aktiv",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Venstre",
   "Right": "Høyre",
   "Settings saved": "Innstillinger lagret",
